--- a/legend.html
+++ b/legend.html
@@ -192,7 +192,7 @@
             },
             'geoviewLayerType': 'ogcWms',
             'initialSettings': {
-              'visible': true
+              'visible': 'yes'
             },
             'listOfLayerEntryConfig': [
               {
@@ -315,5 +315,5 @@
         // TODO: The legend component does not render properly
         const legendItemOutside = api.map(mapIdFour).legend.createLegendItem({ layerId: 'UC4Layer2-msi' });
         const root = createRoot(legendDiv);
-        root.render(legendItemOutside)
+        root.render(legendItemOutside);
       });</script></body></html>
