--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Canadian Geospatial Platform Viewer</title><link rel="shortcut icon" href="./favicon.ico"/><meta name="msapplication-TileColor" content="#da532c"/><meta name="msapplication-config" content="./img/browserconfig.xml"/><meta name="theme-color" content="#ffffff"/><meta name="msapplication-TileColor" content="#da532c"/><meta name="theme-color" content="#ffffff"/><link href="https://fonts.googleapis.com/css?family=Roboto|Montserrat:200,300,400,900|Merriweather" rel="stylesheet"/><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/><link rel="stylesheet" href="css/style.css"/><script src="cgpv-main.js"></script></head><body><div id="LYR1" class="llwp-map" style="height:100vh" data-lang="en" data-config="{
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Canadian Geospatial Platform Viewer</title><link rel="shortcut icon" href="./favicon.ico"/><meta name="msapplication-TileColor" content="#da532c"/><meta name="msapplication-config" content="./img/browserconfig.xml"/><meta name="theme-color" content="#ffffff"/><meta name="msapplication-TileColor" content="#da532c"/><meta name="theme-color" content="#ffffff"/><link href="https://fonts.googleapis.com/css?family=Roboto|Montserrat:200,300,400,900|Merriweather" rel="stylesheet"/><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/><link rel="stylesheet" href="css/style.css"/><script src="cgpv-main.js"></script></head><body><div id="LYR1" class="llwp-map" style="height: 100vh" data-lang="en" data-config="{
       'map': {
         'interaction': 'dynamic',
         'viewSettings': {
@@ -20,7 +20,7 @@
             'geoviewLayerName': { 'en': 'Analysis Limit' },
             'metadataAccessPath': { 'en': 'https://132.156.9.48:30102/api' },
             'geoviewLayerType': 'ogcFeature',
-            'initialSettings': { 'visible': false },
+            'initialSettings': { 'visible': 'no' },
             'listOfLayerEntryConfig': [
               {
                 'layerId': 'analysis-limit',
@@ -47,7 +47,7 @@
             'geoviewLayerName': { 'en': 'Analysis Limit CHN' },
             'metadataAccessPath': { 'en': 'https://132.156.9.48:30102/api' },
             'geoviewLayerType': 'ogcFeature',
-            'initialSettings': { 'visible': false },
+            'initialSettings': { 'visible': 'no' },
             'listOfLayerEntryConfig': [
               {
                 'layerId': 'analysis-limit-CHN',
@@ -74,7 +74,7 @@
             'geoviewLayerName': { 'en': 'Blur Layer' },
             'metadataAccessPath': { 'en': 'https://132.156.9.48:30102/api' },
             'geoviewLayerType': 'ogcFeature',
-            'initialSettings': { 'visible': false },
+            'initialSettings': { 'visible': 'no' },
             'listOfLayerEntryConfig': [
               {
                 'layerId': 'blurlayer'
@@ -92,7 +92,7 @@
               'fr': 'https://maps.geogratis.gc.ca/wms/hydro_network_en'
             },
             'geoviewLayerType': 'ogcWms',
-            'initialSettings': { 'visible': false },
+            'initialSettings': { 'visible': 'no' },
             'listOfLayerEntryConfig': [
               {
                 'entryType': 'raster-image',
@@ -112,7 +112,7 @@
               'fr': 'https://datacube.services.geo.ca/ows/elevation'
             },
             'geoviewLayerType': 'ogcWms',
-            'initialSettings': { 'visible': false },
+            'initialSettings': { 'visible': 'no' },
             'listOfLayerEntryConfig': [
               {
                 'entryType': 'group',
@@ -165,5 +165,4 @@
           },
           'LYR1/LegendsId1'
         );
-
       });</script></body></html>
