--- a/packages/geoview-core/public/index.html
+++ b/packages/geoview-core/public/index.html
@@ -32,6 +32,7 @@
     <a class="page-link" href="./raw-feature-info-1.html">Basic Feature Info (new)</a>
     <a class="page-link" href="./raw-feature-info.html">Basic Feature Info</a>
     <a class="page-link" href="./raw-data-table.html">Basic Data Table</a>
+    <a class="page-link" href="./legend2.html">New Legend Component</a>
     <h4>Basic Loading</h4>
     <a class="page-link" href="./default-config.html">Default Configuration</a>
     <a class="page-link"
