--- a/raw-data-table.html
+++ b/raw-data-table.html
@@ -22,7 +22,7 @@
       };
 
       cgpv.api.event.on(cgpv.api.eventNames.MAP.EVENT_MAP_LOADED, (payload) => {
-        renderDataTableFromMap();
+        setTimeout(() => { renderDataTableFromMap(); }, 2000)
       }, 'mapWM1');
 
     });</script></body></html>
