--- a/packages/geoview-core/public/index.html
+++ b/packages/geoview-core/public/index.html
@@ -29,8 +29,7 @@
     <a class="page-link" href="./languages.html">Languages</a>
     <a class="page-link" href="./cluster.html">Clustering</a>
     <h4>Basic Raw Components</h4>
-    <a class="page-link" href="./raw-feature-info-1.html">Basic Feature Info (new)</a>
-    <a class="page-link" href="./raw-feature-info.html">Basic Feature Info</a>
+    <a class="page-link" href="./raw-feature-info-1.html">Basic Feature Info (in footer panel)</a>
     <a class="page-link" href="./raw-data-table.html">Basic Data Table</a>
     <a class="page-link" href="./raw-legend-2.html">Basic Legend</a>
     <h4>Basic Loading</h4>
