--- a/theme-switching.html
+++ b/theme-switching.html
@@ -61,12 +61,7 @@
       'navBar': ['zoom', 'fullscreen', 'home', 'location', 'export'],
       'appBar': ['geolocator', 'export'],
       'components': ['north-arrow', 'overview-map'],
-      'footerTabs': {
-        'tabs': {
-          'core': ['legend', 'layers', 'details', 'data-table']
-        }
-      },
-      'corePackages': ['basemap-panel'],
+      'corePackages': ['basemap-panel', 'layers-panel', 'details-panel', 'footer-panel'],
       'externalPackages': [],
       'suportedLanguages': ['en']
     }`;
