--- a/raw-feature-info.html
+++ b/raw-feature-info.html
@@ -111,13 +111,8 @@
       'theme': 'geo.ca',
       'appBar': ['export'],
       'navBar': ['zoom', 'fullscreen', 'home', 'location', 'export'],
-      'footerTabs': {
-        'tabs': {
-          'core': ['legend', 'layers', 'details', 'data-table']
-        }
-      },
       'components': ['north-arrow'],
-      'corePackages': [],
+      'corePackages': ['footer-panel'],
       'externalPackages': [],
       'suportedLanguages': ['en']
     }"></div><hr/><div id="resultMap" style="margin-top: 20px; margin-left: 15px">Click on a layer on the map</div><hr/><button type="button" class="collapsible">Code Snippet</button><pre id="codeSnippet" class="panel"></pre><script src="codedoc.js"></script><script>// initialize cgpv and api events, a callback is optional, used if calling api's after the rendering is ready
