--- a/xyz.html
+++ b/xyz.html
@@ -71,12 +71,7 @@
             ]
           },
           'components': ['overview-map'],
-          'footerTabs': {
-            'tabs': {
-              'core': ['legend', 'layers', 'details']
-            }
-          },
-          'corePackages': [],
+          'corePackages': ['footer-panel'],
           'theme': 'geo.ca',
           'suportedLanguages': ['en']
         }"></div><script src="codedoc.js"></script><script src="layerlib.js"></script><script>// initialize cgpv and api events, a callback is optional, used if calling api's after the rendering is ready
