--- a/xyz.html
+++ b/xyz.html
@@ -86,6 +86,8 @@
       });
 
       listenToLegendLayerSetChanges('HLYR1-state', 'LYR1/LegendsLayerSet');
+      listenToLegendLayerSetChanges('HLYR2-state', 'LYR2/LegendsLayerSet');
+
       //create snippets
       createCodeSnippet();
       createConfigSnippet();</script></body></html>
