--- a/wms.html
+++ b/wms.html
@@ -473,8 +473,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_FEATURE_INFO.ALL_QUERIES_DONE,
         (payload) => {
-          const { layerSetId, resultSets, eventType } = payload;
-          createInfoTable('LYR1', 'ResultSetId1', resultSets, eventType);
+          const { layerSetId, resultsSet, eventType } = payload;
+          createInfoTable('LYR1', 'ResultSetId1', resultsSet, eventType);
         },
         'LYR1/FeatureInfoLayerSet'
       );
@@ -483,8 +483,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_LEGENDS.LEGENDS_LAYERSET_UPDATED,
         (payload) => {
-          const { resultSets } = payload;
-          displayLegend('LegendsId1', resultSets);
+          const { resultsSet } = payload;
+          displayLegend('LegendsId1', resultsSet);
         },
         'LYR1/LegendsLayerSet'
       );
@@ -503,8 +503,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_FEATURE_INFO.ALL_QUERIES_DONE,
         (payload) => {
-          const { layerSetId, resultSets, eventType } = payload;
-          createInfoTable('LYR2', 'ResultSetId2', resultSets, eventType);
+          const { layerSetId, resultsSet, eventType } = payload;
+          createInfoTable('LYR2', 'ResultSetId2', resultsSet, eventType);
         },
         'LYR2/FeatureInfoLayerSet'
       );
@@ -513,8 +513,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_LEGENDS.LEGENDS_LAYERSET_UPDATED,
         (payload) => {
-          const { resultSets } = payload;
-          displayLegend('LegendsId2', resultSets);
+          const { resultsSet } = payload;
+          displayLegend('LegendsId2', resultsSet);
         },
         'LYR2/LegendsLayerSet'
       );
@@ -526,8 +526,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_FEATURE_INFO.ALL_QUERIES_DONE,
         (payload) => {
-          const { layerSetId, resultSets, eventType } = payload;
-          createInfoTable('LYR3', 'ResultSetId3', resultSets, eventType);
+          const { layerSetId, resultsSet, eventType } = payload;
+          createInfoTable('LYR3', 'ResultSetId3', resultsSet, eventType);
         },
         'LYR3/FeatureInfoLayerSet'
       );
@@ -536,8 +536,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_LEGENDS.LEGENDS_LAYERSET_UPDATED,
         (payload) => {
-          const { resultSets } = payload;
-          displayLegend('LegendsId3', resultSets);
+          const { resultsSet } = payload;
+          displayLegend('LegendsId3', resultsSet);
         },
         'LYR3/LegendsLayerSet'
       );
@@ -549,8 +549,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_LEGENDS.LEGENDS_LAYERSET_UPDATED,
         (payload) => {
-          const { resultSets } = payload;
-          displayLegend('LegendsId4', resultSets);
+          const { resultsSet } = payload;
+          displayLegend('LegendsId4', resultsSet);
         },
         'LYR4/LegendsLayerSet'
       );
