--- a/esri-dynamic.html
+++ b/esri-dynamic.html
@@ -974,8 +974,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_FEATURE_INFO.ALL_QUERIES_DONE,
         (payload) => {
-          const { layerSetId, resultSets, eventType } = payload;
-          createInfoTable('LYR1', 'ResultSetId1', resultSets, eventType);
+          const { layerSetId, resultsSet, eventType } = payload;
+          createInfoTable('LYR1', 'ResultSetId1', resultsSet, eventType);
         },
         'LYR1/FeatureInfoLayerSet'
       );
@@ -983,8 +983,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_LEGENDS.LEGENDS_LAYERSET_UPDATED,
         (payload) => {
-          const { resultSets } = payload;
-          displayLegend('LegendsId1', resultSets);
+          const { resultsSet } = payload;
+          displayLegend('LegendsId1', resultsSet);
         },
         'LYR1/LegendsLayerSet'
       );
@@ -996,8 +996,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_FEATURE_INFO.ALL_QUERIES_DONE,
         (payload) => {
-          const { layerSetId, resultSets, eventType } = payload;
-          createInfoTable('LYR2', 'ResultSetId2', resultSets, eventType);
+          const { layerSetId, resultsSet, eventType } = payload;
+          createInfoTable('LYR2', 'ResultSetId2', resultsSet, eventType);
         },
         'LYR2/FeatureInfoLayerSet'
       );
@@ -1005,8 +1005,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_LEGENDS.LEGENDS_LAYERSET_UPDATED,
         (payload) => {
-          const { resultSets } = payload;
-          displayLegend('LegendsId2', resultSets);
+          const { resultsSet } = payload;
+          displayLegend('LegendsId2', resultsSet);
         },
         'LYR2/LegendsLayerSet'
       );
@@ -1018,8 +1018,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_FEATURE_INFO.ALL_QUERIES_DONE,
         (payload) => {
-          const { layerSetId, resultSets, eventType } = payload;
-          createInfoTable('LYR3', 'ResultSetId3', resultSets, eventType);
+          const { layerSetId, resultsSet, eventType } = payload;
+          createInfoTable('LYR3', 'ResultSetId3', resultsSet, eventType);
         },
         'LYR3/FeatureInfoLayerSet'
       );
@@ -1027,8 +1027,8 @@
       cgpv.api.event.on(
         cgpv.api.eventNames.GET_LEGENDS.LEGENDS_LAYERSET_UPDATED,
         (payload) => {
-          const { resultSets } = payload;
-          displayLegend('LegendsId3', resultSets);
+          const { resultsSet } = payload;
+          displayLegend('LegendsId3', resultsSet);
         },
         'LYR3/LegendsLayerSet'
       );
