--- a/raw-feature-info.html
+++ b/raw-feature-info.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Canadian Geospatial Platform Viewer</title><link rel="shortcut icon" href="./favicon.ico"/><meta name="msapplication-TileColor" content="#da532c"/><meta name="msapplication-config" content="./img/browserconfig.xml"/><meta name="theme-color" content="#ffffff"/><meta name="msapplication-TileColor" content="#da532c"/><meta name="theme-color" content="#ffffff"/><link href="https://fonts.googleapis.com/css?family=Roboto|Montserrat:200,300,400,900|Merriweather" rel="stylesheet"/><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/><link rel="stylesheet" href="css/style.css"/><script src="cgpv-main.js"></script></head><body><div class="header-table"><table><tbody><tr><td><img class="header-logo" alt="logo" src="./img/Logo.png"/></td><td class="header-title"><h1><strong>Panel - Feature Info</strong></h1></td></tr><tr><td><a href="./index.html">Main</a><br/><a href="#HUC1">1. Basic map English Geo.ca theme</a><br/><a href="#HUC2">2. Basic map French Dark theme</a><br/><a href="#HUC3">3. Basic map English Light theme</a><br/></td></tr></tbody></table><table><tbody><tr><td>This page is used to test the creation and integration of the Feature Info component in a responsive design.</td></tr></tbody></table></div><button type="button" class="collapsible">Click and Hover event listeners</button><pre id="buttonTable" class="panel"></pre><div class="map-title-holder"><h4 id="HUC1">1. Basic Map English Geo.ca theme</h4><a class="ref-link" href="#top">Top</a></div><div id="mapWM1" class="geoview-map" data-lang="en" data-config="{
       'map': {
-        'interaction': 'dynamic',
+        'interaction': 'static',
         'viewSettings': {
           'zoom': 3,
           'center': [-100, 50],
@@ -139,7 +139,7 @@
       'suportedLanguages': ['en', 'fr']
     }"></div><hr/><div id="resultMap" style="margin-top: 20px; margin-left: 15px">Click on a layer on the map</div><hr/><button type="button" class="collapsible">Code Snippet</button><pre id="codeSnippet" class="panel"></pre><div class="map-title-holder"><h4 id="HUC2">2. Basic Map French Dark theme</h4><a class="ref-link" href="#top">Top</a></div><div id="mapWM2" class="geoview-map" data-lang="fr" data-config="{
         'map': {
-          'interaction': 'dynamic',
+          'interaction': 'static',
           'viewSettings': {
             'zoom': 3,
             'center': [-100, 50],
@@ -260,7 +260,7 @@
       'suportedLanguages': ['en', 'fr']
     }"></div><hr/><div class="map-title-holder"><h4 id="HUC3">3. Basic Map English Light theme</h4><a class="ref-link" href="#top">Top</a></div><div id="mapWM3" class="geoview-map" data-lang="en" data-config="{
         'map': {
-          'interaction': 'dynamic',
+          'interaction': 'static',
           'viewSettings': {
             'zoom': 3,
             'center': [-100, 50],
