--- a/add-panels.html
+++ b/add-panels.html
@@ -12,7 +12,7 @@
             'labeled': true
           }
         },
-        'navBar': ['zoom', 'fullscreen', 'home', 'location'],
+        'navBar': ['zoom', 'fullscreen', 'home', 'location', 'export'],
         'appBar': {
           'tabs': {
             'core': ['geolocator', 'export']
