--- a/raw-feature-info.html
+++ b/raw-feature-info.html
@@ -127,7 +127,7 @@
           'core': ['geolocator', 'export']
         }
       },
-      'navBar': ['zoom', 'fullscreen', 'home', 'location'],
+      'navBar': ['zoom', 'fullscreen', 'home', 'location', 'export'],
       'footerBar': {
         'tabs': {
           'core': ['legend', 'layers', 'details', 'data-table']
