--- a/theme-switching.html
+++ b/theme-switching.html
@@ -58,7 +58,7 @@
         ]
       },
       'theme': 'geo.ca',
-      'navBar': ['zoom', 'fullscreen', 'home', 'location'],
+      'navBar': ['zoom', 'fullscreen', 'home', 'location', 'export'],
       'appBar': {
         'tabs': {
           'core': ['geolocator', 'export', 'basemap-panel']
