--- a/languages.html
+++ b/languages.html
@@ -28,7 +28,7 @@
               }
             ]
           },
-          'navBar': ['zoom', 'fullscreen', 'home', 'location'],
+          'navBar': ['zoom', 'fullscreen', 'home', 'location', 'export'],
           'appBar': {
             'tabs': {
               'core': ['geolocator', 'export', 'basemap-panel']
