--- a/config-sandbox.html
+++ b/config-sandbox.html
@@ -42,8 +42,7 @@
                     'map': {
                       'interaction': 'dynamic',
                       'viewSettings': {
-                        'zoom': 5,
-                        'center': [-110, 70],
+                        'minZoom': 5,
                         'projection': 3978
                       },
                       'basemapOptions': {
@@ -51,20 +50,22 @@
                         'shaded': false,
                         'labeled': true
                       },
-                      'listOfGeoviewLayerConfig': [{
+                      'listOfGeoviewLayerConfig': [
+                        {
                         'geoviewLayerId': 'wmsLYR1',
                         'geoviewLayerName': {
-                          'en': 'earthquakes',
-                          'fr': 'earthquakes'
+                          'en': 'earthquakes'
                         },
                         'metadataAccessPath': {
-                          'en': 'https://maps-cartes.services.geo.ca/server_serveur/rest/services/NRCan/earthquakes_en/MapServer/',
                           'fr': 'https://maps-cartes.services.geo.ca/server_serveur/rest/services/NRCan/earthquakes_en/MapServer/'
                         },
                         'geoviewLayerType': 'esriDynamic',
                         'listOfLayerEntryConfig': [
                           {
                             'layerId': '0'
+                          },
+                          {
+                            'layerId': '1'
                           }
                         ]
                       }]
@@ -80,7 +81,7 @@
                     'suportedLanguages': ['en']
                   }
                 </textarea></div></td><td><div class="editor"><div class="line-numbers" id="outputLineNumbers"><span></span></div><textarea id="configOutput" name="configuration" rows="30" cols="110">
-                </textarea></div></td></tr></tbody></table></div><div><button id="validateConfig" style="margin:10px;">Validate</button> <button id="createMap" style="margin:10px;">Create Map</button> <button id="deleteMap" style="margin:10px;">Delete map</button> <span id="validationMessage" style="margin:10px;">File not validate...</span></div><div class="map-title-holder"><h4 id="HLCONF1">Sanbox Map</h4><a class="ref-link" href="#top">Top</a></div><div id="mapSection"><div id="sandboxMap"></div></div><p>This map loads it's configurations from the text area.</p><hr/><button type="button" class="collapsible">Code Snippet</button><pre id="codeSnippet" class="panel"></pre><script src="codedoc.js"></script><script>const isValid = false;
+                </textarea></div></td></tr></tbody></table></div><div><button id="validateConfig" style="margin:10px;">Validate</button> <select id="language"><option value="en">English</option><option value="fr">Français</option></select> <button id="createMap" style="margin:10px;">Create Map</button> <button id="deleteMap" style="margin:10px;">Delete map</button><br/><span id="validationMessage" style="margin:10px;">File not validated...</span></div><div class="map-title-holder"><h4 id="HLCONF1">Sanbox Map</h4><a class="ref-link" href="#top">Top</a></div><div id="mapSection"><div id="sandboxMap"></div></div><p>This map loads it's configurations from the text area.</p><hr/><button type="button" class="collapsible">Code Snippet</button><pre id="codeSnippet" class="panel"></pre><script src="codedoc.js"></script><script>const isValid = false;
       const configAreaString = document.getElementById('configGeoview').value.replaceAll('                ', '');
       document.getElementById('configGeoview').value = configAreaString;
 
@@ -91,45 +92,35 @@
       validateJSONButton.addEventListener('click', function (e) {
         // get message element
         const message = document.getElementById('validationMessage');
+        const langue = document.getElementById('language').value;
+        const configArea = document.getElementById('configGeoview');
+        const configOutput = document.getElementById('configOutput');
 
         try {
           // get config and test if JSON is valid
-          const configArea = document.getElementById('configGeoview');
-          const configOutput = document.getElementById('configOutput');
-          cgpv.api.configApi.getMapConfig(configArea.value).then((mapConfig) => {
-            mapConfig.mapId = 'sandboxMap';
-            configOutput.value = mapConfig.indentedJsonString().replaceAll('gvMap', 'map');
+          const mapConfig = cgpv.api.configApi.getMapConfig(configArea.value, langue);
+          mapConfig.mapId = 'sandboxMap';
+          configOutput.value = mapConfig.indentedJsonString().replaceAll('gvMap', 'map');
 
-            // Fonction pour générer les numéros de ligne
-            (() => {
-              const textarea = document.getElementById('configOutput');
-              const lineNumbersContainer = document.getElementById('outputLineNumbers');
-              const lines = textarea.value.split('\n').length;
-              const lineNumbers = Array.from({ length: lines }, (_, index) => index + 1).join('<br>');
-              lineNumbersContainer.innerHTML = lineNumbers;
-            })();
-
-            // set class and message
-            message.classList.add('config-json-valid');
-            message.classList.remove('config-error');
-            if (mapConfig.isValid) {
-              message.innerHTML = 'File is valid, see console for details...';
-              document.getElementById('createMap').disabled = 0;
-            } else {
-              message.innerHTML = 'File is invalid, see console for details...';
-            }
-          });
-
-          const validConfig = cgpv.api.utilities.core.getValidConfigFromString(
-            document.getElementById('configOutput').value.replaceAll("'", '"'),
-            document.getElementById('sandboxMap')
-          );
+          // Generate line numbers
+          (() => {
+            const textarea = document.getElementById('configOutput');
+            const lineNumbersContainer = document.getElementById('outputLineNumbers');
+            const lines = textarea.value.split('\n').length;
+            const lineNumbers = Array.from({ length: lines }, (_, index) => '').join('<span />');
+            lineNumbersContainer.innerHTML = lineNumbers;
+          })();
 
           // set class and message
           message.classList.add('config-json-valid');
           message.classList.remove('config-error');
-          message.innerHTML = 'File seems valid, see console for details...';
-          document.getElementById('createMap').disabled = 0;
+          if (mapConfig.isValid) {
+            message.innerHTML = 'File is valid, see console for details...';
+            document.getElementById('createMap').disabled = true;
+          } else {
+            message.innerHTML = 'File is invalid, see console for details...';
+          }
+
         } catch (e) {
           // set class and message
           message.classList.add('config-error');
@@ -141,6 +132,7 @@
 
       // Create Button============================================================================================================
       const createMapButton = document.getElementById('createMap');
+      createMapButton.disabled = true;
 
       // add an event listener when a button is clicked
       createMapButton.addEventListener('click', function (e) {
@@ -159,6 +151,7 @@
       });
 
       const deleteMapButton = document.getElementById('deleteMap');
+      deleteMapButton.disabled = true;
 
       // add an event listener when a button is clicked
       deleteMapButton.addEventListener('click', function (e) {
@@ -182,52 +175,6 @@
       textarea.addEventListener('input', (event) => {
         document.getElementById('createMap').disabled = true;
       });
-
-      // Create default map==========================================================================================================
-      cgpv.api.createMapFromConfig(
-        'sandboxMap',
-        `{
-              'map': {
-                'interaction': 'dynamic',
-                'viewSettings': {
-                  'zoom': 5,
-                  'center': [-110, 70],
-                  'projection': 3978
-                },
-                'basemapOptions': {
-                  'basemapId': 'transport',
-                  'shaded': false,
-                  'labeled': true
-                },
-                'listOfGeoviewLayerConfig': [{
-                  'geoviewLayerId': 'wmsLYR1',
-                  'geoviewLayerName': {
-                    'en': 'earthquakes',
-                    'fr': 'earthquakes'
-                  },
-                  'metadataAccessPath': {
-                    'en': 'https://maps-cartes.services.geo.ca/server_serveur/rest/services/NRCan/earthquakes_en/MapServer/',
-                    'fr': 'https://maps-cartes.services.geo.ca/server_serveur/rest/services/NRCan/earthquakes_en/MapServer/'
-                  },
-                  'geoviewLayerType': 'esriDynamic',
-                  'listOfLayerEntryConfig': [
-                    {
-                      'layerId': '0'
-                    }
-                  ]
-                }]
-              },
-              'components': ['overview-map'],
-              'footerBar': {
-                'tabs': {
-                  'core': ['legend', 'layers', 'details', 'data-table']
-                }
-              },
-              'corePackages': [],
-              'theme': 'geo.ca',
-              'suportedLanguages': ['en']
-            }`
-      );
 
       // initialize cgpv and api events, a callback is optional, used if calling api's after the rendering is ready
       cgpv.init((mapId) => {
