--- a/wms.html
+++ b/wms.html
@@ -288,7 +288,7 @@
       },
       'corePackages': [],
       'theme': 'geo.ca'
-    }"></div><label for="language">Select a layer style:</label> <select name="style" id="style"></select> <button class="collapsible">Get Legend</button><pre id="LegendsId3-table-pre" class="panel"></pre><button type="button" class="collapsible">Get Feature Info</button><pre id="ResultSetId3-click" class="panel">Click on feature on the map</pre><hr/><p>This map has a wms layer added from configuration.</p><button type="button" class="collapsible">Configuration Snippet</button><pre id="LYR3CS" class="panel"></pre><hr/><div class="map-title-holder"><h4 id="HLYR4">4. Automatic group creation from metadata information</h4><a class="ref-link" href="#top">Top</a></div><button class="collapsible active">Map Status Flags</button><pre id="HLYR4-state" class="panel map-title-holder"></pre><div id="LYR4" class="geoview-map" data-lang="en" data-config="{
+    }"></div><label for="language">Select a layer style:</label> <select name="style" id="style"></select> <button class="collapsible">Get Legend</button><pre id="LegendsId3-table-pre" class="panel"></pre><button type="button" class="collapsible">Get Feature Info</button><pre id="ResultSetId3-click" class="panel">Click on feature on the map</pre><hr/><p>This map has a wms layer added from configuration.</p><button type="button" class="collapsible">Configuration Snippet</button><pre id="LYR3CS" class="panel"></pre><hr/><div class="map-title-holder"><h4 id="HLYR4">4. Automatic group creation from metadata information (NOT WORKING)</h4><p>Use a child layer for the moment</p><a class="ref-link" href="#top">Top</a></div><button class="collapsible active">Map Status Flags</button><pre id="HLYR4-state" class="panel map-title-holder"></pre><div id="LYR4" class="geoview-map" data-lang="en" data-config="{
         'map': {
           'interaction': 'dynamic',
           'viewSettings': {
@@ -308,8 +308,16 @@
               'geoviewLayerType': 'ogcWms',
               'listOfLayerEntryConfig': [
                 {
-                  'layerId': 'hydro_network',
-                  'layerName': { 'en': 'hydro_network' }
+                  'layerId': 'nhn:nhn',
+                  'layerName': { 'en': 'National Hydro Network (NHN)' }
+                },
+                {
+                  'layerId': 'nhn:nhnda',
+                  'layerName': { 'en': 'Drainage Areas' }
+                },
+                {
+                  'layerId': 'nhn:toponyms',
+                  'layerName': { 'en': 'Toponyms' }
                 }
               ]
             }
